<resources>
    <string name="app_name">Drop</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="privacy">Privacy policy &amp; Terms of use</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="acct_type">Account Type</string>
    <string name="create_acct">Create Account</string>
    <string name="already_acct">Already a member? Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up"><u>New here? Sign Up</u></string>
    <string name="auth_failed">Incorrect email or password</string>
    <string name="acct_successful">Congratulation, account created! Please sign in</string>
    <string name="email_error">Email exist already</string>
    <string name="retrieve_password">Don\'t worry. It happens to anyone. Just send us your email address and we will send you a new one.</string>
    <string name="send_now">Send Now</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="security_log">Security Log</string>
    <string name="save">Save</string>
    <string name="waterType">Type of Water</string>
    <string name="waterCondition">Condition of Water</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_maps">Map</string>
    <string name="overallCond">Overall Condition</string>
    <string name="virus">Virus PPM</string>
    <string name="contaminant">Contaminant PPM</string>
    <string name="year">Year</string>
    <string name="PPM">PPM Type</string>
    <string name="submit">Submit</string>
    <string name="logoutButton">Logout Button</string>
    <string name="logo">Logo</string>
    <string name="mapLocation">Location:&#160;</string>
    <string name="place">Enter the place</string>
    <string name="go">Go</string>
    <string name="log">SECURITY LOG</string>
    <string name="logout">LOGOUT</string>
    <string name="date">Date:&#160;</string>
    <string name="dateTemp">2017/03/12 23:41:34</string>
    <string name="reportTemp">Report #:&#160;</string>
    <string name="num">1023</string>
    <string name="worker">Worker:&#160;</string>
    <string name="nameTemp">Jayden Sun</string>
    <string name="lat">Latitude:&#160;</string>
    <string name="latTemp">-100.00</string>
    <string name="lon">Longitude:&#160;</string>
    <string name="overallCondition">Overall Condition:&#160;</string>
    <string name="stream">Stream</string>
    <string name="vir">Virus PPM:&#160;</string>
    <string name="cont">Contaminant PPM:&#160;</string>
    <string name="reporter">Reporter:&#160;</string>
    <string name="typeWater">Type of Water:&#160;</string>
    <string name="conditionWater">Condition of Water:&#160;</string>
    <string name="treatable">Treatable-Clear</string>
    <string name="sourceReport">Source Report"</string>
    <string name="purityReport">Purity Report</string>
    <string name="map">Map</string>
    <string name="graph">Graph</string>
    <string name="setting">Setting</string>
</resources>
