<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sp_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateTemp"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/reportTemp"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sp_report_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reporter"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sp_reporter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sp_lati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latTemp"
                android:textSize="15sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sp_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latTemp"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/typeWater"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sp_water_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stream"
                android:textSize="15sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/conditionWater"
                android:textSize="15sp" />
            <TextView
                android:id="@+id/sp_water_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/treatable"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>