<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pr_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateTemp"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:text="@string/reportTemp"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pr_report_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/worker"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pr_worker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameTemp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lat"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pr_lati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latTemp"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lon"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pr_long"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latTemp"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/overallCondition"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pr_overall_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stream"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vir"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pr_virus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:text="@string/cont"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/pr_contaminant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/num"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>