<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gatech.cs2340.android.drop.controllers.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="105dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/register_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/register_name_input"
        style="@style/EditText"
        android:inputType="textPersonName"
        android:labelFor="@+id/register_name_input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/register_email_input"
        style="@style/EditText"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/register_email_input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/register_password_input"
        style="@style/EditText"
        android:inputType="textPassword"
        android:labelFor="@+id/register_password_input" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/acct_type"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/user_type_spinner"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"/>

    <Button
        android:id="@+id/register_create_button"
        style="@style/Button"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounder_corner_button"
        android:text="@string/create_acct"
        android:textAllCaps="true" />

    <TextView
        android:id="@+id/register_log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/already_acct"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />

</LinearLayout>
