<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gatech.cs2340.android.drop.controllers.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/welcome_logo" />

    <Button
        android:id="@+id/welcome_register_button"
        style="@style/Button"
        android:background="@drawable/rounder_corner_button"
        android:text="@string/register"
        android:textAllCaps="true" />

    <Button
        android:id="@+id/welcome_login_button"
        style="@style/Button"
        android:background="@drawable/rounder_corner_button"
        android:text="@string/sign_in"
        android:textAllCaps="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/privacy"
        android:textAllCaps="true"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp" />
</LinearLayout>
