<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context="gatech.cs2340.android.drop.controllers.AddSourceReportActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="125dp"
        android:contentDescription="@string/logo"
        android:scaleType="fitCenter"
        android:src="@drawable/register_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/latitude"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pr_lat"
            style="@style/EditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:labelFor="@+id/pr_lat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="35dp"
            android:text="@string/longitude"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pr_long"
            style="@style/EditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberSigned|numberDecimal"
            android:labelFor="@+id/pr_long" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/overallCond"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/overall_condition_spinner"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/virus"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pr_virus"
            style="@style/EditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:labelFor="@+id/pr_virus" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/contaminant"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/pr_contaminant"
            style="@style/EditText"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:labelFor="@+id/pr_contaminant" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_pr"
            style="@style/Button_half"
            android:layout_marginEnd="70dp"
            android:background="@drawable/rounder_corner_button"
            android:text="@string/cancel"
            android:textAllCaps="true" />

        <Button
            android:id="@+id/create_pr"
            style="@style/Button_half"
            android:background="@drawable/rounder_corner_button"
            android:text="@string/save"
            android:textAllCaps="true" />
    </LinearLayout>


</LinearLayout>
