<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="gatech.cs2340.android.drop.controllers.RetrievePasswordActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:lineSpacingExtra="2dp"
        android:text="@string/retrieve_password"
        android:textColor="@android:color/darker_gray"
        android:textSize="19sp" />

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/retrieve_email_input"
        style="@style/EditText"
        android:inputType="textEmailAddress"
        android:labelFor="@+id/retrieve_email_input" />

    <Button
        android:id="@+id/retrieve_button"
        style="@style/Button"
        android:layout_marginTop="45dp"
        android:background="@drawable/rounder_corner_button"
        android:text="@string/send_now"
        android:textAllCaps="true" />
</LinearLayout>
